src/objects/Grant_Award__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Payment__c</fullName>
        <inlineHelpText>The actual payment amount that has been given to the Recipient(s). This is to be filled in only as a total amount, once the last payment has been made, as one activity.</inlineHelpText>
        <label>Actual Payment</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Against_Criteria_From_Grant_Agreement__c</fullName>
        <inlineHelpText>Please ensure you have evidence (if requested) of the Monitoring criteria if you answer Yes to this question.</inlineHelpText>
        <label>Against criteria from grant agreement?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Is_The_Grant_Monitored__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allocation_Method__c</fullName>
        <inlineHelpText>The method by which the grant was allocated. This can be either competed, formula, un-competed or criteria based. Definitions of each are given in the Data and System Glossary of Terms, found on the Home page.</inlineHelpText>
        <label>Allocation Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General Grants - Competed</fullName>
                </value>
                <value>
                    <fullName>General Grants - Un-competed</fullName>
                </value>
                <value>
                    <fullName>General Grants - Criteria Based</fullName>
                </value>
                <value>
                    <fullName>Formula</fullName>
                </value>
                <value>
                    <fullName>Grant in Aid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AwardDuration_number__c</fullName>
        <formula>IF(CEILING(( Award_End_Date__c - Award_Start_Date__c))&gt;=0, CEILING(( Award_End_Date__c - Award_Start_Date__c )/365.4), 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Award Duration(number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Award_Duration_number__c</fullName>
        <formula>IF(VALUE(TEXT(Award_End_Date__c - Award_Start_Date__c))&lt; 183,1,ROUND(VALUE(TEXT(Award_End_Date__c - Award_Start_Date__c))/365, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Award Duration (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Award_End_Date__c</fullName>
        <inlineHelpText>The date the grant closes, as per grant award agreement or letter.</inlineHelpText>
        <label>Award End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Award_Internal_Grant_Administrator__c</fullName>
        <description>An email address field to store the internal grant administrator so that more than one email address for a grant scheme</description>
        <label>Award Internal Grant Admin email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Award_Objectives_Achieved__c</fullName>
        <inlineHelpText>Has the grant been successful in achieving predefined objectives, irrespective of the relationship with the Recipient or their delivery of the award.</inlineHelpText>
        <label>Has the award achieved its objectives?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Partially</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Award_Start_Date__c</fullName>
        <inlineHelpText>The date the grant was issued, as per grant award agreement or letter.</inlineHelpText>
        <label>Award Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCoA_L1_Code_Name__c</fullName>
        <formula>CCoA_L5__r.Account_L1_Long_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCoA L1 Code Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCoA_L2_Code_Name__c</fullName>
        <formula>CCoA_L5__r.Account_L2_Long_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCoA L2 Code Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCoA_L3_Code_Name__c</fullName>
        <formula>CCoA_L5__r.Account_L3_Long_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCoA L3 Code Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCoA_L5__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Common Chart of Accounts Code. The Common Chart of Accounts is a single set of codes to be used across central government for financial reporting. It is based on the codes already used in the HM Treasury budgeting system, OSCAR.</inlineHelpText>
        <label>CCoA L5</label>
        <referenceTo>COA_L5__c</referenceTo>
        <relationshipLabel>Grant Awards</relationshipLabel>
        <relationshipName>Grant_Awards</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>Contact email for this grant award.</description>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Forename__c</fullName>
        <description>Contact forename for this grant award</description>
        <label>Contact Forename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Surname__c</fullName>
        <description>Contact surname for this grant award</description>
        <label>Contact Surname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedByMe__c</fullName>
        <formula>if( CreatedById = $User.Id , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Plus_365__c</fullName>
        <formula>TODAY() - Award_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Plus 365</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evaluation_Modified_Date_by_Portal_User__c</fullName>
        <label>Evaluation Modified Date by Portal User</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Financial_Year__c</fullName>
        <label>Financial Year</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Financial_Year</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Get_existing_organisation_address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicated if the Grant Address should be copied over from the Recipient Address</description>
        <inlineHelpText>Check this box to use the recipient (organisation) address&apos;s details that already exist on the system. Leave this unchecked if you want to record, for this Grant Award, a different address from the one that the Recipient already has in the system.</inlineHelpText>
        <label>Get existing organisation address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grant_Award_Name_Link__c</fullName>
        <formula>HYPERLINK(
 IF(
  ISPICKVAL($Profile.UserType, &apos;PowerCustomerSuccess&apos;), 
  &apos;/datasolution/&apos;, &apos;/&apos;
  ) &amp;  Id, 
   Grant_Award_Name__c, &apos;_self&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Award Name Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Award_Name__c</fullName>
        <description>Description type - This is for users</description>
        <inlineHelpText>A Grant Award can be given to an Organisation (where a named Recipient is required and only one per Awards) or multiple Individuals (only total no of recipients is required). All grant awards need to have a Scheme created first.</inlineHelpText>
        <label>Grant Award Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Grant_Award_Objective__c</fullName>
        <description>This is the Grant Award Objective field which allows users to provide Grant Award Objectives. Changed to Rich Text area as a result of test user session demo.</description>
        <inlineHelpText>Description of what the grant award aims to do.</inlineHelpText>
        <label>Grant Award aims and Objectives</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grant_Award_Reference_Number__c</fullName>
        <inlineHelpText>This is a reference number that can be given from a department&apos;s own internal system, should you wish to. It is optional &amp; will help reconciliation between GGIS &amp; your own system, but you don&apos;t have to include one.</inlineHelpText>
        <label>Grant Award Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Scheme_Name_Link__c</fullName>
        <description>This is the grant scheme name to be shown on the list view and is clickable with the Scheme name as the label.</description>
        <formula>Grant_Scheme__r.Grant_Scheme_Name_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Scheme Name Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Scheme__c</fullName>
        <description>This is the parent scheme for this award</description>
        <inlineHelpText>This is the System Scheme Reference No and clicking it will take you back to the Scheme that this award belong to.</inlineHelpText>
        <label>Grant Scheme</label>
        <referenceTo>Grant_Scheme__c</referenceTo>
        <relationshipLabel>Grant Awards</relationshipLabel>
        <relationshipName>Grant_Awards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Has_Postal_Code_Been_Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates if the postcode has been validated or not</description>
        <label>Has Postal Code Been Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_Instalments_Payments__c</fullName>
        <inlineHelpText>If &quot;Instalment payments&quot; is chosen above, then, please provide the timeframe for paying them out in monthly, quarterly, yearly or other form of instalments.</inlineHelpText>
        <label>If Instalment payments</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Payment_Frequency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>monthly</fullName>
                </value>
                <value>
                    <fullName>quarterly</fullName>
                </value>
                <value>
                    <fullName>yearly</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
                <value>
                    <fullName>n/a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Grant_Administrator_Email__c</fullName>
        <description>This field pulls the email from the grant scheme</description>
        <formula>Grant_Scheme__r.Contact_email_address__c</formula>
        <inlineHelpText>This is auto-populated from the grant scheme email address provided, when the scheme was created. It relates to the grant administrator from a department, available to contact for further information on the grant.</inlineHelpText>
        <label>Scheme Internal Grant Admin email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invalid_User_Created__c</fullName>
        <description>dsafsadf</description>
        <formula>IF(
CreatedBy.UserRoleId &lt;&gt; Grant_Scheme__r.CreatedBy.UserRoleId,
&apos;true&apos;,
&apos;false&apos;
)</formula>
        <inlineHelpText>dsafdsaf</inlineHelpText>
        <label>Invalid User Created</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_CreatedBy_Inactive__c</fullName>
        <description>Formula flag to determine if the created by user is inactive or not.</description>
        <formula>if( CreatedBy.IsActive == FALSE , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is CreatedBy Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_My_Department_Data__c</fullName>
        <description>The user needs to have a default list view filtered for their own department, but they can change this</description>
        <formula>LEFT(
 Grant_Scheme__r.Owner:User.UserRole.Name , 
 IF(
  RIGHT(Grant_Scheme__r.Owner:User.UserRole.Name, 8) == &apos; Manager&apos;
  , LEN(Grant_Scheme__r.Owner:User.UserRole.Name) - 8
  , LEN(Grant_Scheme__r.Owner:User.UserRole.Name) - 5
 )
)== LEFT(
 $UserRole.Name, 
 IF(
  RIGHT($UserRole.Name, 8) == &apos; Manager&apos;
  , LEN($UserRole.Name) - 8
  , LEN($UserRole.Name) - 5
 )
)</formula>
        <label>Is My Department Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Postal_Code_Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates if the value for this post code is valid or not.</description>
        <inlineHelpText>This checkbox indicates if the value for this post code is valid or not.</inlineHelpText>
        <label>Is Postal Code Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_The_Grant_Monitored__c</fullName>
        <inlineHelpText>Please ensure you have evidence (if requested) of the Monitoring activities being done if you answer positively to this question.</inlineHelpText>
        <label>Is the grant monitored?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Partially</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mode_of_Monitoring__c</fullName>
        <inlineHelpText>How the monitoring is being done: agreed milestones/ timeframes or only a sample of the Recipients.</inlineHelpText>
        <label>Mode of Monitoring</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Is_The_Grant_Monitored__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Milestone based</fullName>
                </value>
                <value>
                    <fullName>Time based</fullName>
                </value>
                <value>
                    <fullName>Sample based</fullName>
                </value>
                <value>
                    <fullName>Random Sample</fullName>
                </value>
                <value>
                    <fullName>n/a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mode_of_Payment__c</fullName>
        <inlineHelpText>How the payments are made: based on invoices, actual results, milestones achieved or just scheduled to go out.</inlineHelpText>
        <label>Mode of Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payment by results</fullName>
                </value>
                <value>
                    <fullName>Invoice Based</fullName>
                </value>
                <value>
                    <fullName>Milestone Based</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Recipients__c</fullName>
        <description>This is the number of recipients on grant awards related to individuals.</description>
        <inlineHelpText>For Recipient Type: Individuals. The number of indviduals receiving funds from this grant award.</inlineHelpText>
        <label>Number of Recipient(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <inlineHelpText>When the payments are made to recipients. Upfront/ End = Payments are made at beginning/ end of grant lifecycle. Instalment payments are made at regular intervals throughout grant lifecycle. Ad-hoc payments are at irregular times.</inlineHelpText>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ad-hoc payments</fullName>
                </value>
                <value>
                    <fullName>Upfront payments</fullName>
                </value>
                <value>
                    <fullName>End payments</fullName>
                </value>
                <value>
                    <fullName>Instalment payments</fullName>
                </value>
                <value>
                    <fullName>Milestone payments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portal_User_Cannot_Delete_This_Record__c</fullName>
        <formula>AND( 
NOT($Setup.Bypass__c.Validation_Rules__c) 
, NOT($Setup.Bypass__c.Business_Rules_for_Edit_and_Delete__c) 
, OR($Profile.Name = &apos;Data Solution Portal - Centre User&apos;, $Profile.Name = &apos;Data Solution Portal - User&apos;) 
)</formula>
        <label>Portal User Cannot Delete This Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <formula>Recipient__r.Primary_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Admin_County__c</fullName>
        <description>This is the the admin county value received from the webservice call out.</description>
        <label>Postal Code Admin County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Admin_Ward__c</fullName>
        <description>This is the ward value received from the postal code webservice callout.</description>
        <label>Postal Code Admin Ward</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_CCG__c</fullName>
        <description>This is the Clinical Commissioning Group value received from the webservice call out.</description>
        <label>Postal Code CCG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Country__c</fullName>
        <description>This is the country value received from the web service call out.</description>
        <label>Postal Code Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_European_Electoral_Region__c</fullName>
        <description>This is the electoral region received from postal code webservice call out.</description>
        <label>Postal Code European Electoral Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Geo_Location__c</fullName>
        <description>This field holds the values for longitude and latitude</description>
        <label>Postal Code Geo Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Incode__c</fullName>
        <description>The incode value for the postal code received from the webservice call out.</description>
        <label>Postal Code Incode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_NHS_Health_Authority__c</fullName>
        <description>This is the health authority received from the webservice call out.</description>
        <label>Postal Code NHS Health Authority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_NUTS__c</fullName>
        <description>Nomenclature of Units for Territorial Statistics (NUTS) / Local Administrative Units (LAU) areas received from the webservice callout.</description>
        <label>Postal Code NUTS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Outcode__c</fullName>
        <description>This is the outcode for postal code received from webservice call out.</description>
        <label>Postal Code Outcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Parish__c</fullName>
        <description>This is the parish value for postal code webservice call out.</description>
        <label>Postal Code Parish</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Parliamentary_Constituency__c</fullName>
        <description>This value is generated automated based on the selected postcode.</description>
        <label>Postal Code Parliamentary Constituency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Primary_Care_Trust__c</fullName>
        <description>This is the primary care trust value received from the webservice call out.</description>
        <label>Postal Code Primary Care Trust</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Region__c</fullName>
        <description>This value is generated automatically based on the selected postal code.</description>
        <label>Postal Code Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Validation_Error_Message__c</fullName>
        <description>These is the error message returned from the post code validation error.</description>
        <inlineHelpText>These is the error message returned from the post code validation error.</inlineHelpText>
        <label>Postal Code Validation Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Potential_Issue_With_Grant_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is to signal potential issues with the grant delivery.
Flag can be updated by a super user at any point during the lifetime of a grant. 
If checked, next steps can expect to include contacting grant administrator for further details.</inlineHelpText>
        <label>Potential issue with the grant delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_issue_with_delivery_update_by__c</fullName>
        <inlineHelpText>Name &amp; timestamp of last person to check/uncheck Potential issue flag.</inlineHelpText>
        <label>Potential issue with delivery update by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_For_Given_Score__c</fullName>
        <inlineHelpText>Freetext field to explain reasons for Recipient Organisation Service Score</inlineHelpText>
        <label>Reason why the score was given</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_For_No_Monitoring__c</fullName>
        <inlineHelpText>If you have chosen No in the above field, then you need to provide an explanation in this freetext field why the award is not monitored.</inlineHelpText>
        <label>Reason for no monitoring</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Given_Answer__c</fullName>
        <inlineHelpText>Freetext field to explain reasons for the answer given to the previous question</inlineHelpText>
        <label>State the reason for your answer above</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Name_at_Award_Creation__c</fullName>
        <description>This is the name received for the Grant Award on creation.</description>
        <inlineHelpText>This is the original name of the Recipient Organisation when the Award was created. This would be different from Recipient Name if the organisation has legally changed their name.</inlineHelpText>
        <label>Recipient Name at Award Creation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Organisation_Service_Score__c</fullName>
        <inlineHelpText>Did the Recipient Organisation fulfill the service they were asked to provide in regards to this particular Grant? Definitions of scores are in the Data and System Glossary of Terms, found on the Home page. (to be trialled with certain grants first)</inlineHelpText>
        <label>Recipient Organisation Service Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Exceeded Expectations</fullName>
                </value>
                <value>
                    <fullName>2 - Met Expectations</fullName>
                </value>
                <value>
                    <fullName>3 - Did not meet expectations</fullName>
                </value>
                <value>
                    <fullName>4 - Not assessed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recipient_Secondary_Address_1__c</fullName>
        <inlineHelpText>If a grant award is going to a different address than the one already stored for the Recipient Organisation, then populate the first line of the organisation&apos;s address.</inlineHelpText>
        <label>Recipient Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Secondary_Address_2__c</fullName>
        <inlineHelpText>If a grant award is going to a different address than the one already stored for the Recipient Organisation, then populate the second line of the organisation&apos;s address.</inlineHelpText>
        <label>Recipient Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Secondary_City__c</fullName>
        <inlineHelpText>If a grant award is going to a different address than the one already stored for the Recipient Organisation, then populate the city of the organisation&apos;s address.</inlineHelpText>
        <label>Recipient City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Secondary_Country__c</fullName>
        <inlineHelpText>If a grant award is going to a different address than the one alreday stored for the Recipient Organisation, then populate the country of the organisation&apos;s address.</inlineHelpText>
        <label>Recipient Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abu Dhabi</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Ajman</fullName>
                </value>
                <value>
                    <fullName>Akrotiri</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Ascension</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Baker Island</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recipient_Secondary_County__c</fullName>
        <inlineHelpText>If a grant award is going to a different address than the one already stored for the Recipient Organisation, then populate the county of the organisation&apos;s address.</inlineHelpText>
        <label>Recipient County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Secondary_Postal_Code__c</fullName>
        <inlineHelpText>The Location based data report is based on the accuracy of this postcode. If a grant award is going to a different address than the one already stored for the Recipient Organisation, then populate the postcode of the organisation&apos;s address.</inlineHelpText>
        <label>Recipient Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is the grant recipient.</description>
        <inlineHelpText>For Recipient Type: Organisation. Name of the organisation that receives the grant.</inlineHelpText>
        <label>Recipient Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Grant Awards (Recipient)</relationshipLabel>
        <relationshipName>Grant_Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Profile__c</fullName>
        <inlineHelpText>A explanation of this field can be found in our Glossary of Terms. This can be downloaded from the front page</inlineHelpText>
        <label>Risk Profile</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Score_In_Dispute__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Flag checkbox signalling that the Recipient disputes the Recipient Organisation Service Score</inlineHelpText>
        <label>Score in Dispute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TestField__c</fullName>
        <formula>TEXT(TODAY() -  Award_End_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestField</label>
        <type>Text</type>
    </fields>
</CustomObject>